// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<tr>
  <td>
    my webhook
  </td>
  <td>
    http://webhook.target
  </td>
  <td>
    <LatestDelivery
      latestDelivery={
        Object {
          "at": "12.02.2018",
          "durationMs": 20,
          "httpStatus": 200,
          "id": "2",
          "success": true,
        }
      }
    />
  </td>
  <td
    className="thin nowrap text-right"
  >
    <WebhookActions
      onDelete={[MockFunction]}
      onUpdate={[MockFunction]}
      webhook={
        Object {
          "key": "1",
          "latestDelivery": Object {
            "at": "12.02.2018",
            "durationMs": 20,
            "httpStatus": 200,
            "id": "2",
            "success": true,
          },
          "name": "my webhook",
          "url": "http://webhook.target",
        }
      }
    />
  </td>
</tr>
`;

exports[`should render correctly the latest delivery 1`] = `
<span>
  webhooks.last_execution.none
</span>
`;

exports[`should render correctly the latest delivery 2`] = `
<React.Fragment>
  <AlertSuccessIcon />
  <span
    className="spacer-left"
  >
    <DateTimeFormatter
      date="12.02.2018"
    />
  </span>
</React.Fragment>
`;

exports[`should render correctly the latest delivery 3`] = `
<React.Fragment>
  <AlertErrorIcon />
  <span
    className="spacer-left"
  >
    <DateTimeFormatter
      date="12.02.2018"
    />
  </span>
</React.Fragment>
`;
